assets/stylesheets/src/vacationists.scss
@import "normalize";
@import "utils";
@import "grid";

body {
  color: #000;
  background: #f9eeec;
  font: 100%/1.5 futura, "Helvetica Neue", Helvetica, Arial, sans-serif; *font-size: 1em;

  @media screen and (min-width: 600px) {
    background: url(/assets/vbg.jpg);
  }
}

@mixin circle($diameter: 530px) {
  @media screen and (min-width: 600px) {
    padding: 0;
    border: none;
    width: $diameter;
    height: $diameter;
    position: relative;
    left: 50%;
    margin-left: -#{($diameter/2)};
    top: 0;
    @include rounded(530px);
  }

  @include transition(left);
}

body.js-enabled {
  #content {
    #about, #contact {
      @media screen and (min-width: 600px) {
        left: 50%;
        padding-bottom: 0;
        position: absolute;
        top: 4em;
        z-index: -1;
      }
    }

    #about {
      @media screen and (min-width: 790px) {
        top: 6em;
      }
    }

    #content {
      @media screen and (min-width: 790px) {
        top: 8em;
      }
    }
  }
}

@mixin track_image($id, $img, $width, $height, $top, $left) {
  .img_#{$id} {
    background: url(/assets/#{$img}) no-repeat;
    width: $width;
    height: $height;
    top: $top;
    left: $left;
  }
}

.images {
  position: fixed;
  top: 0;
  left: 0;
  display: none;

  .img_1, .img_2 {
    position: absolute;
    z-index: -1;
  }

  @media screen and (min-width: 600px) {
    display: block;
  }

  &.track_3 {
   @include track_image(1, 'tr_a_1.jpg', 311px, 538px, 148px, 240px);
   @include track_image(2, 'tr_a_2.jpg', 467px, 449px, 238px, 1017px);
  }

  &.track_5 {
   @include track_image(1, 'tr_b_1.jpg', 777px, 632px, 414px, 553px);
  }

  &.track_1 {
   @include track_image(1, 'tr_f_1.jpg', 629px, 635px, 237px, 86px);
   @include track_image(2, 'tr_f_2.jpg', 322px, 635px, 237px, 859px);
  }

  &.track_6 {
   @include track_image(1, 'tr_c_1.jpg', 466px, 726px, 57px, 86px);
   @include track_image(2, 'tr_c_2.jpg', 471px, 635px, 237px, 859px);
  }

  &.track_4 {
   @include track_image(1, 'tr_d.jpg', 1095px, 733px, 139px, 86px);
  }

  &.track_2 {
   @include track_image(1, 'tr_e.jpg', 783px, 830px, 229px, 547px);
  }
}

#content {
  .player {
    background: #f9eeec;
    @include circle(530px);
    left: 40%;

    @media screen and (min-width: 600px) {
      top: 2.4em;
    }

    .inner {
      @media screen and (min-width: 600px) {
        width: 75%;
        margin: 0 auto;
      }
      padding-top: 4.4em;
    }
  }

  h1 {
    @include scaled_type(40, 20, 2);
    font-family: futura, "Helvetica Neue", Helvetica, Arial, sans-serif;
    letter-spacing: 0;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    text-transform: uppercase;

    @media screen and (min-width: 600px) {
      padding-top: 1.5em;
    }
  }

  a {
    color: #333;
    text-decoration: none;
  }

  a:hover {
    color: #cb7459;
  }

  .track-listing {
    color: #333;
    padding: 0 0 0 4em;
    margin-bottom: 2.6em;

    @media screen and (min-width: 600px) {
      padding-left: 4.5em;
    }

    li {
      @include scaled_type(14, 20, 0.5);
      position: relative;
      font-family: futura, "Helvetica Neue", Helvetica, Arial, sans-serif;

      @media screen and (min-width: 600px) {
        @include scaled_type(15, 20, 0.5);
      }

      p {
        margin: 0;
      }

      a {
        &:hover, &.playing, &.paused {
          &:after {
            content: ".";
            background: url(/assets/control.png) 0 3px no-repeat;
            width: 11px;
            height: 16px;
            position: absolute;
            top: 0;
            left: -45px;
            text-indent: -9999px;
          }
        }

        &.playing {
          color: #654d81;
          &:after {
            background-position-y: -11px;
          }
        }

        &.paused {
          color: #cb7459;
          background-position-y: -3px;
        }
      }

      div {
        height: 0;
        overflow: hidden;
      }
      object {
        position: absolute;
        top: 0;
        left: 0;
      }

      em.state {
        text-transform: italic;
        font-size: 0.9em;
        line-height: 1em;
      }
    }
  }

  ul.links {
    @include scaled_type(13, 20, 0.5);
    list-style: none;

    @media screen and (min-width: 600px) {
      padding-left: 15%;
    }

    li {
      display: inline;
      margin-right: 1em;

      &.download {
        padding-right: 1em;
        margin-right: 2.35em;
      }

      a {
        font-weight: bold;
        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
      }
    }
  }

  #about, #contact {
    color: #dce9e0;
    padding-bottom: 2em;

    .inner {
      margin: 0 auto;

      ul {
        list-style: none;
        padding: 0;
      }

      h2 {
        @include scaled_type(20, 20, 1);
        font-style: italic;
        color: #262520;
      }

      p {
        @include scaled_type(14, 20, 0.5);
        -webkit-font-smoothing: antialiased;

        &:first-child {
          @include scaled_type(16, 20, 0.5);
        };

        em {
          @include scaled_type(14, 20, 0.5);
        }
      }
    }
  }

  #about {
    @include circle(420px);
    background: #5c3e74;
    .inner {
      width: 80%;
      padding-top: 5.4em;

      @media screen and (min-width: 600px) {
        width: 70%;
      }

      a {
        font-weight: bold;
        color: #dce9e0;
        text-decoration: underline;
      }

      p.credits {
        @include scaled_type(12, 20, 0.5);
      }
    }
  }

  #contact {
    @include circle(220px);
    background: #a43b30;
    .inner {
      width: 90%;
      padding-top: 3.25em;

      h2 {
        text-align: center;
      }

      li {
        text-align: center;
        @include scaled_type(16, 20, 1);
      }
    }
  }
}

